[frontend/components] fix login button alignment on wrap

--- a/Iceshrimp.Frontend/Components/FollowButton.razor.css
+++ b/Iceshrimp.Frontend/Components/FollowButton.razor.css
@@ -29,6 +29,7 @@
 .follow-button {
     display: flex;
     align-items: center;
+    margin-left: auto;
 }
 ::deep {.icon {
     vertical-align: text-bottom;
